# ShellWise

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
Misc/: prompt.txt.rtf  tc.md
docs/: CNAME  index.html
shellwise/: __init__.py  __main__.py  ai.py  cache.py  classifier.py  config.py  core.py  display.py  executor.py  model.py  runner.py
shellwise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai.py  test_cache.py  test_classifier.py  test_core.py  test_display.py  test_executor.py  test_model.py  test_runner.py
tools/: fetch_binaries.py
