[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shellwise"
version = "0.3.0"
description = "Local AI terminal co-pilot — understands plain English, executes safely"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

# Truly zero-dep install: bundled llama-server binary in shellwise/bin/<platform>/
# handles inference. Optional extras add alternative backends.
dependencies = []

[project.optional-dependencies]
# Pure-Python alternative backend (no bundled binary needed if you install this).
cpu = ["llama-cpp-python"]
gpu = ["llama-cpp-python"]
test = ["pytest>=7.0", "pytest-mock>=3.0"]
dev = ["shellwise[cpu,test]", "ruff", "mypy"]

[project.scripts]
sw = "shellwise.__main__:main"
shellwise = "shellwise.__main__:main"

[tool.setuptools]
# Include the bundled llama-server binaries and LICENSE in the wheel.
include-package-data = true

[tool.setuptools.package-data]
shellwise = [
    "bin/darwin-arm64/*",
    "bin/darwin-x64/*",
    "bin/linux-x64/*",
    "bin/win32/*",
    "bin/LICENSES/*",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
